--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
   </style>
 </head>
 <body>
-  <h1>Projetos Publicados</h1>
+    <h1>📁 Projetos DevChallenges</h1>
   <ul>
-    <li><a href="1-Projeto-Pagina-HTML/index.html" target="_blank">1 - Página HTML Simples</a></li>
-    <li><a href="2-Projeto-FAQ-HTML+CSS/index.html" target="_blank">2 - página de Perguntas Frequentes (FAQ)</a></li>
+    <li><a href="1-Projeto-Pagina-HTML+CSS/index.html" target="_blank">1 - Página HTML Simples</a></li>
+    <li><a href="2-Projeto-FAQ-HTML+CSS/index.html" target="_blank">2 - Página de Perguntas Frequentes (FAQ)</a></li>
+    <li><a href="2-simple-faq-master/index.html" target="_blank">2 - Página de FAQ Simples CSS</a></li>
     <!-- <li><a href="3-Projeto-Galeria/index.html" target="_blank">3 - Galeria de Imagens</a></li>
     <li><a href="4-Projeto-FAQ/index.html" target="_blank">4 - FAQ com HTML, CSS e JS</a></li>
     Adicione mais projetos aqui conforme necessário -->
